[gd_scene load_steps=15 format=3 uid="uid://3feieucapg6y"]

[ext_resource type="Script" uid="uid://bva6xhqikxxfx" path="res://Blocos/BolaManager.gd" id="1_dqgup"]
[ext_resource type="Texture2D" uid="uid://cagg4abg1srv8" path="res://sprite/bloco 0.png" id="1_p2e61"]
[ext_resource type="Script" uid="uid://cbtwwc1lju2dn" path="res://Blocos/clicação.gd" id="2_b0i1j"]
[ext_resource type="Script" uid="uid://dhnscolg0ngsh" path="res://Blocos/vida.gd" id="3_jupsf"]
[ext_resource type="Script" uid="uid://d12hccop4lsvr" path="res://Blocos/sons.gd" id="4_d760c"]
[ext_resource type="PackedScene" uid="uid://pb11wtln8gx1" path="res://Blocos/somBola/BarulhoBola.tscn" id="5_scd2b"]
[ext_resource type="PackedScene" uid="uid://c2bwbvkwscn1u" path="res://Blocos/teste/particula_cene.tscn" id="9_a1oko"]
[ext_resource type="PackedScene" uid="uid://bxsolbcha7rvn" path="res://Blocos/teste/particulas_morte.tscn" id="10_e88gi"]
[ext_resource type="Script" uid="uid://dhy3lrr3fllsj" path="res://Blocos/particulas.gd" id="10_rwgl2"]
[ext_resource type="Script" uid="uid://daqq1p8nj2s3m" path="res://Blocos/morte_handler.gd" id="11_e88gi"]
[ext_resource type="Script" uid="uid://d225jot6tc3jo" path="res://Blocos/rag_dol.gd" id="12_qp0pu"]
[ext_resource type="Script" uid="uid://cqxrs5y8g2vvv" path="res://Blocos/batida_handler.gd" id="13_cy0im"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_e88gi"]
bounce = 0.11

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0i1j"]
size = Vector2(16, 16)

[node name="Caixa" type="RigidBody2D" node_paths=PackedStringArray("sprite", "colisao", "area_clicada", "particulas", "morte_handler", "rag_dol", "vidaNodo") groups=["Caixa"]]
scale = Vector2(3.395, 3.395)
physics_material_override = SubResource("PhysicsMaterial_e88gi")
can_sleep = false
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("1_dqgup")
sprite = NodePath("Sprite")
colisao = NodePath("colisao")
area_clicada = NodePath("areaClicada")
particulas = NodePath("particulas")
morte_handler = NodePath("morteHandler")
rag_dol = NodePath("ragDol")
vidaNodo = NodePath("vida")

[node name="colisao" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b0i1j")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_p2e61")

[node name="areaClicada" type="Area2D" parent="."]
script = ExtResource("2_b0i1j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaClicada"]
shape = SubResource("RectangleShape2D_b0i1j")

[node name="labelVida" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -6.0
offset_right = 24.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_vertical = 1
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="vida" type="Node" parent="." node_paths=PackedStringArray("labelVida")]
script = ExtResource("3_jupsf")
labelVida = NodePath("../labelVida")

[node name="Sons" type="Node" parent="."]
script = ExtResource("4_d760c")
barulhoBola = ExtResource("5_scd2b")

[node name="particulas" type="Node2D" parent="."]
script = ExtResource("10_rwgl2")
particulasGerado = ExtResource("9_a1oko")
particulasMortes = ExtResource("10_e88gi")

[node name="morteHandler" type="Node" parent="."]
script = ExtResource("11_e88gi")

[node name="timerQueueFree" type="Timer" parent="morteHandler"]

[node name="ragDol" type="Node" parent="."]
script = ExtResource("12_qp0pu")

[node name="ColisaoHandler" type="Node" parent="." groups=["Caixa"]]
script = ExtResource("13_cy0im")

[node name="couldownSom" type="Timer" parent="ColisaoHandler"]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="ColisaoHandler" method="_on_caixa_body_entered"]
[connection signal="clicado" from="areaClicada" to="vida" method="_on_area_clicada_clicado"]
[connection signal="clicado" from="areaClicada" to="ragDol" method="_on_area_clicada_clicado"]
[connection signal="input_event" from="areaClicada" to="areaClicada" method="_on_input_event"]
[connection signal="dano" from="vida" to="Sons" method="_on_vida_dano"]
[connection signal="dano" from="vida" to="particulas" method="_on_vida_dano"]
[connection signal="morri" from="vida" to="." method="_morri"]
[connection signal="morri" from="vida" to="Sons" method="_on_vida_morri"]
[connection signal="morri" from="vida" to="particulas" method="_on_vida_morri"]
[connection signal="morri" from="vida" to="morteHandler" method="_on_vida_morri"]
[connection signal="timeout" from="morteHandler/timerQueueFree" to="morteHandler" method="_on_timer_queue_free_timeout"]
[connection signal="criarParticulas" from="ColisaoHandler" to="Sons" method="_on_batida_handler_criar_particulas"]
[connection signal="criarParticulas" from="ColisaoHandler" to="particulas" method="_on_batida_handler_criar_particulas"]
[connection signal="criarSom" from="ColisaoHandler" to="Sons" method="_on_colisao_handler_criar_som"]
[connection signal="criarSom" from="ColisaoHandler" to="Sons" method="_on_batida_handler_criar_som"]
[connection signal="timeout" from="ColisaoHandler/couldownSom" to="ColisaoHandler" method="_on_couldown_som_timeout"]
